#2934 left sidebar is not visible with Gutenberg fixed

--- a/pagebuilder/inc/admin-amp-page-builder.css
+++ b/pagebuilder/inc/admin-amp-page-builder.css
@@ -1386,3 +1386,8 @@ body .modal-footer .del-btn-modal{
     background:#fff;
     color:red;
 }
+.edit-post-layout__content .modal-container {    
+    top: 100px;
+    left: 170px;
+    right: 300px;
+}
